--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Arpit Santoki</span></h1>
 			            <h2 class="mb-4">Creative Mind with a Caring Nature</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Download Bio Data</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">About Me</a></p>
+			            <p><a href="images/Arpit Bio Data.pdf" class="btn btn-primary py-3 px-4">Download Bio Data</a> <a href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">About Me</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -97,7 +97,7 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download Bio Data</a></p>
+                <p><a href="images/Arpit Bio Data.pdf" class="btn btn-primary py-3 px-3">Download Bio Data</a></p>
               </div>
 	          </div>
 	        </div>
@@ -334,7 +334,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+91 99243 40435</a></p>
+	            <p><a href="tel://9924340435">+91 99243 40435</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -343,7 +343,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">santokiarpit0@gmail.com</a></p>
+	            <p><a href="mailto:santokiarpit0@gmail.com">santokiarpit0@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -352,7 +352,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="https://arpit-biodata.onrender.com/">arpit-biodata</a></p>
 	          </div>
           </div>
         </div>
