--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <style type="text/css">
+    	html, body {
+			  overflow-y: auto;
+			}
+    </style>
+
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -334,6 +341,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
+	            <p>Jitendrabhai</p>
 	            <p><a href="tel://9924340435">+91 99243 40435</a></p>
 	          </div>
           </div>
