--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style type="text/css">
-    	html, body {
-			  overflow-y: auto;
-			}
+    	.js-fullheight {
+    		height: calc(var(--vh, 1vh) * 100);
+    	}
     </style>
-
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
