--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style type="text/css">
-    	.js-fullheight {
-    		height: calc(var(--vh, 1vh) * 100);
-    	}
+    	.home-slider {
+			  touch-action: pan-y;
+			}
     </style>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
-	  
+	  	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Arpit</a>
