--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style type="text/css">
-    	.home-slider {
-			  touch-action: pan-y;
+    	.text-white {
+			  color: white !important;
 			}
     </style>
   </head>
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Arpit</a>
-	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation" style="color: white !important;">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
@@ -65,7 +65,8 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Arpit Santoki</span></h1>
 			            <h2 class="mb-4">Creative Mind with a Caring Nature</h2>
-			            <p><a href="images/Arpit Bio Data.pdf" class="btn btn-primary py-3 px-4">Download Bio Data</a> <a href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">About Me</a></p>
+			            <p><a href="images/Arpit Bio Data.pdf" class="btn btn-primary py-3 px-4">Download Bio Data</a></p>
+			            <a href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">Scroll <i class="bi bi-arrow-down-short"></i> </a>
 		            </div>
 		          </div>
 	        	</div>
