--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <style type="text/css">
-    	.text-white {
-			  color: white !important;
-			}
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  	  
@@ -66,7 +62,7 @@
 			            <h1 class="mb-4 mt-3">I'm <span>Arpit Santoki</span></h1>
 			            <h2 class="mb-4">Creative Mind with a Caring Nature</h2>
 			            <p><a href="images/Arpit Bio Data.pdf" class="btn btn-primary py-3 px-4">Download Bio Data</a></p>
-			            <a href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">Scroll <i class="bi bi-arrow-down-short"></i> </a>
+			            <a href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">Scroll <i class="fa-solid fa-angles-down"></i> </a>
 		            </div>
 		          </div>
 	        	</div>
@@ -425,6 +421,22 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
+
+  <script>
+	  $(document).ready(function () {
+	    $('a[href^="#"]').on('click', function (e) {
+	      e.preventDefault();
+
+	      var target = this.hash;
+	      var $target = $(target);
+
+	      $('html, body').stop().animate({
+	        scrollTop: $target.offset().top
+	      }, 800, 'swing'); // 800ms duration and swing easing
+	    });
+	  });
+	</script>
+
     
   </body>
 </html>
