--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4">About Me</h2>
+		          	<h1 class="big"><i class="fa-solid fa-user"></i>About</h1>
+		            <h2 class="mb-4"><i class="fa-solid fa-user"></i>About Me</h2>
 		            <p>Kind-hearted, career-focused, and grounded in family values. Seeking a lifelong partner to grow with emotionally and spiritually.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Santoki Arpit Jitendrabhai</span></li>
@@ -111,8 +111,8 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Education</h1>
-        		<h2 class="mb-4">Education</h2>
+          	<h1 class="big big-2"><i class="fa-solid fa-user-graduate"></i>Education</h1>
+        		<h2 class="mb-4"><i class="fa-solid fa-user-graduate"></i>Education</h2>
             <p>My academic journey reflects a strong foundation in both design and computer applications, with degrees from reputed institutions.</p>
           </div>
         </div>
@@ -140,8 +140,8 @@
 		  <div class="container">
 		    <div class="row justify-content-center pb-5">
 		      <div class="col-md-10 heading-section text-center ftco-animate">
-		        <h1 class="big big-2">Employment</h1>
-		        <h2 class="mb-4">Employment</h2>
+		        <h1 class="big big-2"><i class="fa-solid fa-laptop"></i> Employment</h1>
+		        <h2 class="mb-4"><i class="fa-solid fa-laptop"></i> Employment</h2>
 		        <p>Details about my current and past job roles, company locations, and career progression.</p>
 		      </div>
 		    </div>
@@ -177,8 +177,8 @@
 		  <div class="container">
 		    <div class="row justify-content-center pb-5">
 		      <div class="col-md-10 heading-section text-center ftco-animate">
-		        <h1 class="big big-2">Family</h1>
-		        <h2 class="mb-4">Family</h2>
+		        <h1 class="big big-2"><i class="fa-solid fa-people-roof"></i> Family</h1>
+		        <h2 class="mb-4"><i class="fa-solid fa-people-roof"></i> Family</h2>
 		        <p>Information about my immediate family and their occupations.</p>
 		      </div>
 		    </div>
@@ -213,8 +213,8 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Property</h1>
-        		<h2 class="mb-4">Property</h2>
+          	<h1 class="big big-2"><i class="fa-solid fa-sack-dollar"></i> Property</h1>
+        		<h2 class="mb-4"><i class="fa-solid fa-sack-dollar"></i> Property</h2>
             <p>Information regarding owned residential and ancestral properties.</p>
           </div>
         </div>
@@ -238,73 +238,21 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-project d-none" id="projects-section">
+    <section class="ftco-section ftco-no-pb" id="property-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+          <div class="col-md-10 heading-section text-center ftco-animate">
+          	<h1 class="big big-2"><i class="fa-solid fa-photo-film"></i> Gallery</h1>
+        		<h2 class="mb-4"><i class="fa-solid fa-photo-film"></i> Gallery</h2>
+            <p>A glimpse into my life through photos that reflect my personality, values, and cherished moments.</p>
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-  				</div>
-  				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-  				</div>
-
-    			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
+    			<div class="col-md-6">
+    				<img src="images/20250507_173907.jpg" class="img-thumbnail d-block" alt="...">
     			</div>
-    			<div class="col-md-4">
-    				<div class="row">
-    					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-    				</div>
+    			<div class="col-md-6">
+    				<img src="images/20250507_185318.jpg" class="img-thumbnail d-block" alt="...">
     			</div>
     		</div>
     	</div>
@@ -314,8 +262,8 @@
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Contact</h1>
-            <h2 class="mb-4">Contact Me</h2>
+            <h1 class="big big-2"><i class="fa-solid fa-address-card"></i> Contact</h1>
+            <h2 class="mb-4"><i class="fa-solid fa-address-card"></i> Contact</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
