--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2"><i class="fa-solid fa-address-card"></i> Contact</h1>
             <h2 class="mb-4"><i class="fa-solid fa-address-card"></i> Contact</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>For further correspondence regarding the alliance, contact</p>
           </div>
         </div>
 
